css/main.css
/* ... */
.services__box h3 {
  color: var(--main-color);
  text-align: center;
  margin: 20px auto 40px;
  font-size: 25px;
}
.services__box-info {
  position: relative;
  padding: 15px;
  text-align: right;
  background-color: #f9f9f9;
}
.services__box-info::before {
  content: "0" counter(services);
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 80px;
  background-color: var(--main-color);
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 30px;
  font-weight: bold;
  padding-right: 15px;
}
.services__box-info::after {
  content: "";
  position: absolute;
  top: 0;
  left: 80px;
  height: 100%;
  width: 50px;
  background-color: #d5d5d5;
  transform: skewX(-30deg);
  -webkit-transform: skewX(-30deg);
  -moz-transform: skewX(-30deg);
  -ms-transform: skewX(-30deg);
  -o-transform: skewX(-30deg);
}
.services__box-info a {
  color: var(--main-color);
}
/* End Services */
/* Start Our Skills */
.skills__content {
  display: flex;
  align-items: center;
}
.skills__progress {
  flex: 1;
}
.skills__progress-box h3 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: revert;
}
.skills__progress-box h3 span {
  color: var(--main-color);
  border: 1px solid #ccc;
  padding: 3px 5px;
  border-radius: 4px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  font-size: 12px;
}
.skills__progress-box-progress {
  height: 30px;
  background-color: #eee;
  position: relative;
}
.skills__progress-box-progress span {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  background-color: var(--main-color);
}
@media (max-width: 991px) {
  .skills__content > img {
    display: none;
  }
}
/* End Our Skills */
/* Start Work Steps */
.work {
  background-color: var(--section-background);
}
.work__content {
  display: flex;
  align-items: center;
}
.work__content > img {
  max-width: 100%;
  margin-right: 100px;
}
@media (max-width: 991px) {
  .work__content {
    flex-direction: column;
  }
  .work__content > img {
    margin-right: 0;
    margin-bottom: 50px;
  }
}
.work__info-box {
  background-color: #f6f5f5;
  border: 2px solid white;
  border-radius: 6px;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  -ms-border-radius: 6px;
  -o-border-radius: 6px;
  padding: 30px;
  display: flex;
  align-items: center;
  margin-bottom: 20px;
  position: relative;
  z-index: 1;
}
.work__info-box::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  width: 0;
  height: 0;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  background-color: #ededed;
  transition: var(--main-transition-duration);
  -webkit-transition: var(--main-transition-duration);
  -moz-transition: var(--main-transition-duration);
  -ms-transition: var(--main-transition-duration);
  -o-transition: var(--main-transition-duration);
  z-index: -1;
}
.work__info-box:hover::before {
  width: 100%;
  height: 100%;
}
.work__info-box > img {
  width: 64px;
  margin-right: 30px;
}
.work__info-box-text h3 {
  font-size: 22px;
}
.work__info-box-text p {
  color: var(--transparent-text-color);
  line-height: 1.7;
  margin: 10px 0 0;
  font-size: 18px;
}
/* End Work Steps */
/* Start Events */
.events__content {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}
.events__content > img {
  width: 450px;
}
@media (max-width: 991px) {
  .events__content > img {
    display: none;
  }
}
.events__info {
  flex: 1;
}
.events__time {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px auto;
  gap: 10px;
}
.events__time .unit {
  width: 75px;
  border: 1px solid #d4d4d4;
  border-radius: 6px;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  -ms-border-radius: 6px;
  -o-border-radius: 6px;
  text-align: center;
  transition: var(--main-transition-duration);
  -webkit-transition: var(--main-transition-duration);
  -moz-transition: var(--main-transition-duration);
  -ms-transition: var(--main-transition-duration);
  -o-transition: var(--main-transition-duration);
}
.events__time .unit > span {
  display: block;
}
.events__time .unit span:first-child {
  color: var(--main-color);
  padding: 15px;
  font-size: 35px;
  font-weight: bold;
}
.events__time .unit span:last-child {
  padding: 8px 10px;
  font-size: 13px;
  border-top: 1px solid #d4d4d4;
  transition: var(--main-transition-duration);
  -webkit-transition: var(--main-transition-duration);
  -moz-transition: var(--main-transition-duration);
  -ms-transition: var(--main-transition-duration);
  -o-transition: var(--main-transition-duration);
}
.events__time .unit:hover,
.events__time .unit:hover span {
  border-color: var(--main-color);
}
.events__title {
  text-align: center;
  font-size: 30px;
  margin-top: 40px;
}
.events__description {
  text-align: center;
  font-size: 19px;
  line-height: 1.7;
  margin: 20px auto;
  color: var(--transparent-text-color);
}
.events__content form {
  margin: 70px auto 20px;
  padding: 30px 40px;
  background-color: #f6f6f5;
  border-radius: 50px;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  -ms-border-radius: 50px;
  -o-border-radius: 50px;
  display: flex;
  gap: 20px;
  width: 600px;
  max-width: 100%;
}
@media (max-width: 767px) {
  .events__content form {
    flex-direction: column;
    padding: 20px;
    border-radius: 0;
  }
}
.events__content form input[type="email"] {
  padding: 20px;
  flex: 1;
  border-radius: 50px;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  -ms-border-radius: 50px;
  -o-border-radius: 50px;
  border: none;
  caret-color: var(--main-color);
}
.events__content form input[type="email"]:focus {
  outline: none;
}
/* ... */

